adding test classes for code coverage

--- a/force-app/main/default/classes/VDT_AttachmentServiceTest.cls
+++ b/force-app/main/default/classes/VDT_AttachmentServiceTest.cls
@@ -1,5 +1,11 @@
+/**
+ * @author      BASE Life Science
+ * @since       2021.03.01
+ * @description This Apex class provides code coverage for VDT_AttachmentService apex class
+ */
 @IsTest
 public inherited sharing class VDT_AttachmentServiceTest {
+
     @IsTest
     static void shouldCreateAttachmentForRecord() {
         Account acc = new Account(
@@ -33,6 +39,53 @@ public inherited sharing class VDT_AttachmentServiceTest {
         System.assertEquals(1, attachments.size());
         System.assertEquals('TEST_ATT.json', attachments[0].Name);
         System.assertEquals('Updated Content', attachments[0].Body.toString());
+    }
+
+    @IsTest
+    static void shouldThrowException_WhenUpdatingRecord() {
+        Boolean exceptionThrown = false;        
+        Test.startTest();
+        try {
+            VDT_AttachmentService.updateAttachmentForRecord('Updated Content', 'TEST_ATT', VDT_AttachmentService.JSON_FORMAT, null);            
+        } catch (VDT_AttachmentService.AttachmentServiceException e) {
+            exceptionThrown = true;
+        }
+        Test.stopTest();
+        System.assert(exceptionThrown);
+    }
+
+    @IsTest
+    static void shouldUpsertAttachmentContent_WhenMultipleRecordsAreSent() {
+        Account accWAttachments = new Account(Name = 'Account w Attachment');
+        Account accWoAttachments = new Account(Name = 'Account wo Attachment');
+        insert new List<Account>{accWAttachments, accWoAttachments};
+        VDT_AttachmentService.createAttachmentForRecord('Test Content For Attachment', VDT_ObjectCalculationBuilder.COUNTRY_USAGE_FILE_NAME, VDT_AttachmentService.JSON_FORMAT, accWAttachments.Id);
+        Test.startTest();
+        Map<String, String> attachmentContentByParentId = new Map<String, String>();
+        attachmentContentByParentId.put(accWAttachments.Id, 'New Content');
+        attachmentContentByParentId.put(accWoAttachments.Id, 'New Content');
+        VDT_AttachmentService.upsertAttachmentForRecords(attachmentContentByParentId, VDT_ObjectCalculationBuilder.COUNTRY_USAGE_FILE_NAME + VDT_AttachmentService.JSON_FORMAT);
+        Test.stopTest();
+    }
+
+    @IsTest
+    static void shouldInsertContentDocument() {
+        Test.startTest();
+        VDT_AttachmentService.insertDocument(VDT_ObjectCalculationBuilder.COUNTRY_USAGE_FILE_NAME, 'Test Content', VDT_AttachmentService.JSON_FORMAT);
+        Test.stopTest();        
+    }
+
+    @IsTest
+    static void shouldReturn_AllAttachmentsForTheGivenParents() {
+        Account accWAttachments = new Account(Name = 'Account w Attachment');
+        Account accWoAttachments = new Account(Name = 'Account wo Attachment');
+        insert new List<Account>{accWAttachments, accWoAttachments};
+        VDT_AttachmentService.createAttachmentForRecord('Test Content For Attachment', VDT_ObjectCalculationBuilder.COUNTRY_USAGE_FILE_NAME, VDT_AttachmentService.JSON_FORMAT, accWAttachments.Id);
+        VDT_AttachmentService.createAttachmentForRecord('Test Content For Attachment', VDT_ObjectCalculationBuilder.COUNTRY_USAGE_FILE_NAME, VDT_AttachmentService.JSON_FORMAT, accWoAttachments.Id);
+        Test.startTest();
+        VDT_AttachmentService.getAttachmentsByParentId(new Set<String>{accWAttachments.Id, accWoAttachments.Id}, VDT_ObjectCalculationBuilder.COUNTRY_USAGE_FILE_NAME + VDT_AttachmentService.JSON_FORMAT);
+        Test.stopTest();
+        
     }
 
     @IsTest
