escaping double quotes from field label

--- a/force-app/main/default/classes/VDT_ObjectCalculationBuilder.cls
+++ b/force-app/main/default/classes/VDT_ObjectCalculationBuilder.cls
@@ -165,7 +165,7 @@ public inherited sharing class VDT_ObjectCalculationBuilder {
                     .get(field)
                     .getDescribe();
             fieldSummary = new VDT_FieldSummary(
-                fieldDescribe.getLabel(),
+                fieldDescribe.getLabel().replace('"', '\\\"'),
                 field,
                 String.valueOf(fieldDescribe.getType())
             );
