--- a/force-app/main/default/classes/VDT_VeevaVaultController.cls
+++ b/force-app/main/default/classes/VDT_VeevaVaultController.cls
@@ -6,16 +6,51 @@
 public with sharing class VDT_VeevaVaultController {
 
     @AuraEnabled
-    public static string getVaultJoinField() {
+    public static String getStatusValue(String status) {
         try {
-            return VDT_CustomMetadataService.getVaultJoinField();
+            String packageVersion = VDT_CustomMetadataService.getPackageVersion();
+            String approvedValue = [SELECT Status_Value__c 
+                                    FROM VDT_Vault_Document_Status__mdt 
+                                    WHERE Package_Version__c = :packageVersion AND Status__c = :status][0].Status_Value__c;
+            return approvedValue;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+    @AuraEnabled
+    public static Map<String, String> getStatusMap() {
+        try {
+            Map<String, String> statusMap = new Map<String, String>();
+            for (VDT_Vault_Document_Status_Map__mdt statusMapCMT : [SELECT MasterLabel, Document_Status__c FROM VDT_Vault_Document_Status_Map__mdt]) {
+                statusMap.put(statusMapCMT.Document_Status__c, statusMapCMT.MasterLabel);
+            }
+            return statusMap;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+    @AuraEnabled
+    public static List<VDT_CRM_Document_Column__mdt> getCRMColumns() {
+        try {
+            String packageVersion = VDT_CustomMetadataService.getPackageVersion();
+            return [SELECT MasterLabel, Field_API_Name__c, Vault_API_Field__c FROM VDT_CRM_Document_Column__mdt WHERE Package_Version__c = :packageVersion];
         } catch (Exception e) {
             throw new AuraHandledException(e.getMessage());
         }
     }
 
     @AuraEnabled
-    public static List<VDT_Vault_Document_Column__mdt> getColumns(){
+    public static string getAPIFieldNameByMappingName(String mapName) {
+        try {
+            String packageVersion = VDT_CustomMetadataService.getPackageVersion();
+            return VDT_CustomMetadataService.getFieldNameForCustomObject(packageVersion, mapName);
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    @AuraEnabled
+    public static List<VDT_Vault_Document_Column__mdt> getVaultColumns(){
         try {
             return VDT_CustomMetadataService.getActiveDocumentColumns();
         } catch (Exception e) {
@@ -28,7 +63,7 @@ public with sharing class VDT_VeevaVaultController {
         try {            
             List<String> selectFields = new List<String>();
             for (VDT_Vault_Document_Column__mdt activeColumn : VDT_CustomMetadataService.getActiveDocumentColumns()) {
-                selectFields.add(activeColumn.Veeva_API_Name__c);
+                selectFields.add(activeColumn.Vault_API_Name__c);
             }
 
             String vql = String.format('SELECT {0} FROM documents', new List<String>{
@@ -43,71 +78,30 @@ public with sharing class VDT_VeevaVaultController {
     }
 
     @AuraEnabled
-    public static List<DocumentWrapper> getApprovedDocuments(List<String> vaultDocIds) {
+    public static List<SObject> getApprovedDocuments(List<String> vaultDocIds) {
         try {
-            List<DocumentWrapper> documents = new List<DocumentWrapper>();
-            
-            String documentVaultIdField = VDT_CustomMetadataService.getFieldNameForCustomObject('DOCUMENT_VAULT_ID');
-            String documentTypeField = VDT_CustomMetadataService.getFieldNameForCustomObject('DOCUMENT_TYPE');
-            String documentStatusField = VDT_CustomMetadataService.getFieldNameForCustomObject('DOCUMENT_STATUS');
+            List<SObject> documents = new List<SObject>();
 
             String packageVersion = VDT_CustomMetadataService.getPackageVersion();
             Map<String,String> queriesByName = VDT_CustomMetadataService.getQueriesByPackageVersionAndModule(packageVersion, 'Vault Document');
 
-            String approvedValue = [SELECT Status_Value__c FROM VDT_Vault_Document_Status__mdt WHERE Package_Version__c = :packageVersion AND Status__c = 'APPROVED' ][0].Status_Value__c;
+            List<String> columns = new List<String>();
+            for (VDT_CRM_Document_Column__mdt crmColumn : [SELECT Field_API_Name__c FROM VDT_CRM_Document_Column__mdt WHERE Package_Version__c = :packageVersion]) {
+                columns.add(crmColumn.Field_API_Name__c);
+            }
 
             String approvedDocumentsQuery = queriesByName.get('Documents');
-            List<SObject> records = Database.query(approvedDocumentsQuery);
-            Map<String, String> vaultStatusMap = getVaultStatusMap();
+            List<SObject> records = Database.query(String.format(approvedDocumentsQuery, new List<String>{
+                String.join(columns, ',')
+            }));
             for (SObject record : records) {
-                documents.add(new DocumentWrapper(
-                    vaultStatusMap, 
-                    String.valueOf(record.get(documentVaultIdField)), 
-                    record.Id,
-                    getPropertyValue(record, documentTypeField),
-                    String.valueOf(record.get(documentStatusField)), 
-                    approvedValue)
-                );
+                documents.add(record);
             }
             return documents;
         } catch (Exception e) {
             VDT_Log.get().add(e.getMessage() + '\n' + e.getStackTraceString(), VDT_LogSeverity.ERROR);
             VDT_Log.get().publish();
             throw new AuraHandledException(e.getMessage());
-        }
-    }
-
-    private static Map<String, String> getVaultStatusMap() {
-        Map<String, String> vaultStatusMap = new Map<String, String>();
-        for (VDT_Vault_Document_Status_Map__mdt statusMap : [SELECT MasterLabel, Document_Status__c FROM VDT_Vault_Document_Status_Map__mdt]) {
-            vaultStatusMap.put(statusMap.Document_Status__c, statusMap.MasterLabel);
-        }
-        return vaultStatusMap;
-    }
-
-    public class DocumentWrapper {
-
-        @AuraEnabled
-        public String vaultDocId;
-
-        @AuraEnabled
-        public String status;
-
-        @AuraEnabled
-        public String type;
-
-        @AuraEnabled
-        public Boolean isApproved;
-
-        @AuraEnabled
-        public String crmId;
-
-        public DocumentWrapper(Map<String, String> vaultStatusMap, String vaultDocId, String crmId, String type, String status, String approvedValue) {
-            this.vaultDocId = vaultDocId;
-            this.status = vaultStatusMap.containsKey(status) ? vaultStatusMap.get(status) : status;
-            this.isApproved = approvedValue == status;
-            this.crmId = crmId;
-            this.type = type;
         }
     }
 
